--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-Django==4.0.8
+Django==5.0.1
 django-admin-interface==0.19.1
 django-admin-honeypot==1.1.0
 django-ipware==4.0.2
@@ -9,8 +9,8 @@ django-allauth==0.51.0
 django-hCaptcha==0.2.0
 whitenoise==6.2.0
 django-maintenance-mode==0.16.3
-django-debug-toolbar==3.5.0
+# django-debug-toolbar==3.5.0
 django-pwa==1.0.10
-django-admin-interface==0.20.0
+django-admin-interface==0.19.1
 pyminizip
 discord-webhook
