--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-Django==5.0.1
+django==5.0.1
 django-admin-interface==0.19.1
 django-admin-honeypot==1.1.0
 django-ipware==4.0.2
@@ -14,3 +14,5 @@ django-pwa==1.0.10
 django-admin-interface==0.19.1
 pyminizip
 discord-webhook
+pytz
+boringavatars
