--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,8 @@ django==5.0.1
 django-admin-interface==0.29
 django-admin-honeypot==1.1.0
 django-ipware==4.0.2
-python-dotenv==0.20.0
-sentry-sdk==1.6.0
+python-dotenv==1.0.1
+sentry-sdk==2.19
 django-extra-settings
 django-allauth==65.3.1
 django-hCaptcha==0.2.0
@@ -18,3 +18,4 @@ django-extensions
 Werkzeug
 PyJWT
 gunicorn
+cryptography
